--- a/html/products.html
+++ b/html/products.html
@@ -465,6 +465,7 @@
             </div></a>
 
             <!-- Case Card 2 -->
+             <a href="/html/product-details.html">
             <div class="bg-white rounded-xl card-shadow overflow-hidden hover:shadow-lg transition-shadow case-card"
                 data-category="debt" data-date="2023-03-15" data-urgent="false" data-funded="42">
                 <div class="relative">
@@ -504,9 +505,11 @@
                         تبرع الآن
                     </button>
                 </div>
-            </div>
+            </div></a>
 
             <!-- Case Card 3 -->
+
+            <a href="/html/product-details.html">
             <div class="bg-white rounded-xl card-shadow overflow-hidden hover:shadow-lg transition-shadow case-card"
                 data-category="food" data-date="2023-03-05" data-urgent="true" data-funded="70">
                 <div class="relative">
@@ -547,9 +550,10 @@
                         تبرع الآن
                     </button>
                 </div>
-            </div>
+            </div></a>
 
             <!-- Case Card 4 -->
+            <a href="/html/product-details.html">
             <div class="bg-white rounded-xl card-shadow overflow-hidden hover:shadow-lg transition-shadow case-card"
                 data-category="medical" data-date="2023-01-10" data-urgent="false" data-funded="90">
                 <div class="relative">
@@ -588,9 +592,10 @@
                         تبرع الآن
                     </button>
                 </div>
-            </div>
+            </div></a>
 
             <!-- New Case Card 5 (Orphan Support) -->
+            <a href="/html/product-details.html">
             <div class="bg-white rounded-xl card-shadow overflow-hidden hover:shadow-lg transition-shadow case-card"
                 data-category="orphan" data-date="2023-03-18" data-urgent="false" data-funded="35">
                 <div class="relative">
@@ -629,9 +634,10 @@
                         تبرع الآن
                     </button>
                 </div>
-            </div>
+            </div></a>
 
                     <!-- New Case Card 6 (Medical) -->
+                    <a href="/html/product-details.html">
                     <div class="bg-white rounded-xl card-shadow overflow-hidden hover:shadow-lg transition-shadow case-card"
                         data-category="medical" data-date="2023-03-18" data-urgent="false" data-funded="55">
                         <div class="relative">
@@ -670,7 +676,7 @@
                                 تبرع الآن
                             </button>
                         </div>
-                    </div>
+                    </div></a>
                     
                     </div>
                     
