--- a/html/about.html
+++ b/html/about.html
@@ -123,14 +123,18 @@
     </style>
 </head>
 
-<body class="islamic-pattern min-h-screen py-10 px-4">
+<body>
+        <!---------------------------------------- شريط التنقل ---------------------------------------->
+        <div id="navbar-placeholder"></div>
+        <!---------------------------------------- شريط التنقل ---------------------------------------->
+        <section class="islamic-pattern min-h-screen py-10 px-4">
     <div class="max-w-5xl mx-auto bg-light rounded-2xl shadow-custom overflow-hidden relative z-10">
         <!-- Header Section -->
         <div class="bg-primary py-8 px-6 relative">
             <div class="absolute -top-10 -left-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
             <div class="absolute -bottom-10 -right-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
             <div class="flex justify-center mb-4">
-                <!-- أيقونة موقع إحسان -->
+
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12" viewBox="0 0 100 100">
                     <defs>
                         <mask id="crescentMask">
@@ -263,6 +267,9 @@
         <div class="lantern lantern-1"></div>
         <div class="lantern lantern-2"></div>
         <div class="lantern lantern-3"></div>
+    </section>
+        <script src="../js/navbar.js"></script>
+
     </div>
 </body>
 
