--- a/html/payment.html
+++ b/html/payment.html
@@ -36,44 +36,7 @@
   <!---------------------------------------- شريط التنقل ---------------------------------------->
   <section class="class=" bg-primary min-h-screen font-sans"">
     <!-- Decorative Background -->
-    <div class="fixed inset-0 bg-primary overflow-hidden z-0">
-      <!-- Stars Pattern -->
-      <div class="absolute inset-0"
-        style="background-image: radial-gradient(#D4AF37 1px, transparent 1px); background-size: 30px 30px; opacity: 0.1;">
-      </div>
 
-      <!-- Big Crescent Moon -->
-      <div class="absolute -top-20 -right-20 opacity-10">
-        <svg width="400" height="400" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M50 0C22.3858 0 0 22.3858 0 50C0 77.6142 22.3858 100 50 100C77.6142 100 100 77.6142 100 50C100 22.3858 77.6142 0 50 0ZM50 80C33.4315 80 20 66.5685 20 50C20 33.4315 33.4315 20 50 20C66.5685 20 80 33.4315 80 50C80 66.5685 66.5685 80 50 80Z"
-            fill="#D4AF37" />
-        </svg>
-      </div>
-
-      <!-- Decorative Lanterns -->
-      <div class="absolute top-10 left-10 opacity-20">
-        <svg width="80" height="120" viewBox="0 0 80 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect x="35" y="0" width="10" height="20" fill="#D4AF37" />
-          <path d="M15 20H65V80C65 91.0457 56.0457 100 45 100H35C23.9543 100 15 91.0457 15 80V20Z" fill="#D4AF37" />
-          <path d="M15 30H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M15 50H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M15 70H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M40 100V120" stroke="#D4AF37" stroke-width="3" />
-        </svg>
-      </div>
-
-      <div class="absolute bottom-10 right-10 opacity-20">
-        <svg width="80" height="120" viewBox="0 0 80 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect x="35" y="0" width="10" height="20" fill="#D4AF37" />
-          <path d="M15 20H65V80C65 91.0457 56.0457 100 45 100H35C23.9543 100 15 91.0457 15 80V20Z" fill="#D4AF37" />
-          <path d="M15 30H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M15 50H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M15 70H65" stroke="#B8860B" stroke-width="2" />
-          <path d="M40 100V120" stroke="#D4AF37" stroke-width="3" />
-        </svg>
-      </div>
-    </div>
 
     <!-- Main Content -->
     <div class="container mx-auto px-4 py-8 min-h-screen relative z-10">
@@ -91,7 +54,7 @@
           <!-- Title -->
           <div class="text-center text-light mt-4">
             <h1 class="text-4xl font-bold text-gold">صفحة الدفع</h1>
-            <p class="text-2xl text-accent mt-2">رمضان كريم - شهر الخير والعطاء</p>
+            <p class="text-2xl text-accent mt-2 text-black">رمضان كريم - شهر الخير والعطاء</p>
           </div>
         </div>
       </div>
@@ -194,7 +157,7 @@
                 </h2>
 
                 <div class="border-b-2 border-accent py-4 flex justify-between items-center">
-                  <span class="font-bold text-primary text-lg">رقم المستفيد:</span>
+                  <span class="font-bold text-primary text-lg">رقم المستفيد: 21237</span>
                   <span id="debtorId" class="text-secondary text-lg"></span>
                 </div>
 
