--- a/html/product-details.html
+++ b/html/product-details.html
@@ -49,7 +49,10 @@
 
 <body>
     <!-- Main Navigation -->
-  
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
+    <div id="navbar-placeholder"></div>
+    <script src="../js/navbar.js"></script>
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
 
     <!-- Page Content -->
     <main class="max-w-7xl mx-auto py-8 px-4 md:px-6">
