--- a/html/products.html
+++ b/html/products.html
@@ -297,6 +297,10 @@
 </head>
 
 <body>
+        <!---------------------------------------- شريط التنقل ---------------------------------------->
+        <div id="navbar-placeholder"></div>
+        <script src="../js/navbar.js"></script>
+        <!---------------------------------------- شريط التنقل ---------------------------------------->
     <!-- Waterfall Animation Container -->
     <div class="waterfall-container" id="waterfall-container"></div>
 
