--- a/html/zakah.html
+++ b/html/zakah.html
@@ -19,9 +19,14 @@
       }
     </style>
   </head>
-  <body
-    class="bg-gradient-to-br from-emerald-50 via-teal-50 to-yellow-50 min-h-screen py-12"
-  >
+  <body>
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
+    <div id="navbar-placeholder"></div>
+    <script src="../js/navbar.js"></script>
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
+  <section  class="bg-gradient-to-br from-emerald-50 via-teal-50 to-yellow-50 min-h-screen py-12">
+
+
     <div class="container mx-auto px-4 max-w-6xl">
       <!-- Header Section -->
       <header class="text-center mb-12">
@@ -382,6 +387,7 @@
         </div>
       </div>
     </div>
+  </section>
     <script src="zakah.js"></script>
   </body>
 </html>
