--- a/html/userProfile.html
+++ b/html/userProfile.html
@@ -34,255 +34,10 @@
   </head>
   <body class="bg-light">
     <!-- New Navbar with logo image and right-side alignment -->
-    <header
-      class="bg-gradient-to-l from-primary to-secondary text-white shadow-lg"
-    >
-      <div class="container mx-auto px-4">
-        <nav class="flex justify-between items-center py-3">
-          <!-- Logo -->
-          <a href="#" class="z-10 flex items-center group order-2 md:order-1">
-            <img
-              src="../assets/image/image1.png"
-              alt="الريان"
-              class="h-11 group-hover:scale-105 transition-transform"
-            />
-          </a>
-
-          <!-- Desktop Navigation -->
-          <div class="hidden md:block order-1 md:order-2">
-            <ul class="flex items-center space-x-1">
-              <li class="relative group px-1">
-                <a
-                  href="../index.html"
-                  class="inline-block py-2 px-4 text-white hover:text-gold transition-colors"
-                >
-                  الرئيسية
-                  <span
-                    class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"
-                  ></span>
-                </a>
-              </li>
-              <li class="relative group px-1">
-                <a
-                  href="about-us.html"
-                  class="inline-block py-2 px-4 text-white hover:text-gold transition-colors"
-                >
-                  حول
-                  <span
-                    class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"
-                  ></span>
-                </a>
-              </li>
-              <li class="relative group px-1">
-                <a
-                  href="Quran.html"
-                  class="inline-block py-2 px-4 text-gold font-medium"
-                >
-                  القرآن
-                  <span
-                    class="absolute bottom-0 left-0 w-full h-0.5 bg-gold"
-                  ></span>
-                </a>
-              </li>
-              <li class="relative group px-1">
-                <a
-                  href="volunteer.html"
-                  class="inline-block py-2 px-4 text-white hover:text-gold transition-colors"
-                >
-                  التطوع
-                  <span
-                    class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"
-                  ></span>
-                </a>
-              </li>
-              <li class="relative group px-1">
-                <a
-                  href="contact-us.html"
-                  class="inline-block py-2 px-4 text-white hover:text-gold transition-colors"
-                >
-                  اتصل بنا
-                  <span
-                    class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"
-                  ></span>
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Registration / Profile / Logout Section -->
-          <div class="order-1 md:order-3 flex items-center space-x-4">
-            <!-- Sign-up Button (shown if NOT logged in) -->
-            <a
-              href="../index.html#Donation"
-              id="signUpButton"
-              class="bg-gold text-primary hover:bg-white hover:text-primary px-6 py-2 rounded-full transition-colors font-bold flex items-center"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-4 w-4 ml-1"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              سجل معنا
-            </a>
-
-            <!-- Profile & Logout (shown if user IS logged in) -->
-            <div id="profileContainer" class="hidden items-center space-x-4">
-              <!-- Profile icon/link -->
-              <a
-                href="profile.html"
-                class="text-white hover:text-gold transition-colors flex items-center"
-              >
-                <!-- Example profile icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M5.121 17.804A4 4 0 018 16h8a4 4 0 012.879 1.804M15 11V9A3 3 0 009 9v2m6 0H9"
-                  />
-                </svg>
-                <span class="ml-1">الملف الشخصي</span>
-              </a>
-
-              <!-- Logout button -->
-              <a
-                href="logout.html"
-                class="bg-gold text-primary hover:bg-white hover:text-primary px-4 py-2 rounded-full transition-colors font-bold flex items-center"
-              >
-                <!-- Example logout icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-4 w-4 ml-1"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M6 4H10V6H7V14H10V16H6V4ZM14 8C14.5523 8 15 8.44771 15 9V11C15 11.5523 14.5523 12 14 12H10V8H14Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                تسجيل الخروج
-              </a>
-            </div>
-          </div>
-
-          <!-- Mobile Toggle Button -->
-          <div class="md:hidden z-10 order-3">
-            <button
-              id="hamburger"
-              class="flex flex-col items-center justify-center w-10 h-10 rounded-full bg-gold bg-opacity-20 hover:bg-opacity-30 transition-colors"
-            >
-              <span class="block w-5 h-0.5 bg-white mb-1"></span>
-              <span class="block w-5 h-0.5 bg-white mb-1"></span>
-              <span class="block w-5 h-0.5 bg-white"></span>
-            </button>
-          </div>
-        </nav>
-      </div>
-
-      <!-- Mobile Menu -->
-      <div
-        id="mobile-menu"
-        class="fixed inset-0 bg-primary bg-opacity-95 z-50 transform -translate-y-full transition-transform duration-300 md:hidden"
-      >
-        <div class="flex justify-end p-4">
-          <button
-            id="close-menu"
-            class="text-white hover:text-gold transition-colors"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-8 w-8"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M6 18L18 6M6 6l12 12"
-              />
-            </svg>
-          </button>
-        </div>
-        <div class="flex flex-col items-center justify-center h-full">
-          <ul class="flex flex-col items-center space-y-6 -mt-16">
-            <li class="w-full text-center">
-              <a
-                href="../index.html"
-                class="text-xl text-white hover:text-gold transition-colors block py-2"
-                >الرئيسية</a
-              >
-            </li>
-            <li class="w-full text-center">
-              <a
-                href="about-us.html"
-                class="text-xl text-white hover:text-gold transition-colors block py-2"
-                >حول</a
-              >
-            </li>
-            <li class="w-full text-center">
-              <a
-                href="Quran.html"
-                class="text-xl text-gold font-medium block py-2"
-                >القرآن</a
-              >
-            </li>
-            <li class="w-full text-center">
-              <a
-                href="volunteer.html"
-                class="text-xl text-white hover:text-gold transition-colors block py-2"
-                >التطوع</a
-              >
-            </li>
-            <li class="w-full text-center">
-              <a
-                href="contact-us.html"
-                class="text-xl text-white hover:text-gold transition-colors block py-2"
-                >اتصل بنا</a
-              >
-            </li>
-            <li class="w-full text-center mt-8">
-              <a
-                href="../index.html#Donation"
-                class="inline-block text-xl bg-gold text-primary hover:bg-white hover:text-primary px-8 py-3 rounded-full transition-colors"
-              >
-                <span class="flex items-center justify-center">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-5 w-5 ml-2"
-                    viewBox="0 0 20 20"
-                    fill="currentColor"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                  سجل معنا
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
+  <!---------------------------------------- شريط التنقل ---------------------------------------->
+  <div id="navbar-placeholder"></div>
+  <script src="../js/navbar.js"></script>
+  <!---------------------------------------- شريط التنقل ---------------------------------------->
 
     <!-- User Profile Content -->
     <div class="container mx-auto px-4 py-8">
