Upload Navbar & Footer

--- a/html/contact.html
+++ b/html/contact.html
@@ -187,6 +187,9 @@
             alert('تم إرسال الرسالة بنجاح');
         });
     </script>
+    <!---------------------------------------- Footer ---------------------------------------->
+<div id="footer-placeholder"></div>
+<!---------------------------------------- Footer ---------------------------------------->
 </body>
 
 </html>
