--- a/html/payment.html
+++ b/html/payment.html
@@ -294,6 +294,9 @@
     setupRamadanProgress();
     handleDonationAmount();
   </script>
+  <!---------------------------------------- Footer ---------------------------------------->
+<div id="footer-placeholder"></div>
+<!---------------------------------------- Footer ---------------------------------------->
 </body>
 
 </html>
