--- a/html/userProfile.html
+++ b/html/userProfile.html
@@ -448,127 +448,9 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-secondary py-10 text-white mt-12">
-      <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-          <div>
-            <div class="flex items-center mb-4">
-              <div class="text-gold text-2xl ml-2">
-                <i class="fas fa-hand-holding-heart"></i>
-              </div>
-              <h3 class="text-xl font-bold">يد الخير</h3>
-            </div>
-            <p class="text-accent text-sm">
-              منصة خيرية تهدف إلى مساعدة المحتاجين وتوفير الدعم المادي والمعنوي
-              لهم من خلال مبادرات متنوعة.
-            </p>
-          </div>
-          <div>
-            <h3 class="text-lg font-bold mb-4 border-r-2 border-gold pr-3">
-              روابط سريعة
-            </h3>
-            <ul class="space-y-2">
-              <li>
-                <a
-                  href="#"
-                  class="text-accent hover:text-gold transition-colors"
-                  >الرئيسية</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-accent hover:text-gold transition-colors"
-                  >من نحن</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-accent hover:text-gold transition-colors"
-                  >المبادرات</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-accent hover:text-gold transition-colors"
-                  >التبرع</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="text-accent hover:text-gold transition-colors"
-                  >تواصل معنا</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="text-lg font-bold mb-4 border-r-2 border-gold pr-3">
-              اتصل بنا
-            </h3>
-            <ul class="space-y-2">
-              <li class="flex items-center">
-                <i class="fas fa-map-marker-alt text-gold ml-2"></i>
-                <span class="text-accent">
-                  عمان، المملكة الأردنية الهاشمية</span
-                >
-              </li>
-              <li class="flex items-center">
-                <i class="fas fa-phone text-gold ml-2"></i>
-                <span class="text-accent">6981362 79 962+</span>
-              </li>
-              <li class="flex items-center">
-                <i class="fas fa-envelope text-gold ml-2"></i>
-                <span class="text-accent">info@yadalkhayr.org</span>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="text-lg font-bold mb-4 border-r-2 border-gold pr-3">
-              النشرة البريدية
-            </h3>
-            <p class="text-accent text-sm mb-4">
-              اشترك في نشرتنا البريدية للحصول على آخر أخبار مبادراتنا
-            </p>
-            <div class="flex">
-              <input
-                type="email"
-                placeholder="بريدك الإلكتروني"
-                class="p-2 rounded-r-none rounded-lg flex-grow text-primary focus:outline-none"
-              />
-              <button
-                class="bg-gold hover:bg-darkgold text-white p-2 rounded-l-lg rounded-r-none"
-              >
-                <i class="fas fa-paper-plane"></i>
-              </button>
-            </div>
-            <div class="flex space-x-4 mt-4">
-              <a href="#" class="text-accent hover:text-gold text-xl"
-                ><i class="fab fa-facebook"></i
-              ></a>
-              <a href="#" class="text-accent hover:text-gold text-xl"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="text-accent hover:text-gold text-xl"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="#" class="text-accent hover:text-gold text-xl"
-                ><i class="fab fa-youtube"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="border-t border-accent/30 mt-8 pt-6 text-center">
-          <p class="text-accent text-sm">
-            © 2025 يد الخير. جميع الحقوق محفوظة.
-          </p>
-        </div>
-      </div>
-    </footer>
+<!---------------------------------------- Footer ---------------------------------------->
+<div id="footer-placeholder"></div>
+<!---------------------------------------- Footer ---------------------------------------->
 
     <!-- Edit Profile Modal -->
     <div
