--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!---------------------------------------- شريط التنقل ---------------------------------------->
     <div id="navbar-placeholder"></div>
-
+    <script src="js/navbarIndex.js"></script>
     <!---------------------------------------- شريط التنقل ---------------------------------------->
 
     <!---------------------------------------- سلايدر ---------------------------------------->
@@ -391,15 +391,11 @@
 <!---------------------------------------- المراجعات ---------------------------------------->
 
 
-    <!-- Footer -->
-    <footer class="bg-[#225470] text-white py-8">
-        <div class="container mx-auto text-center">
-            <p class="text-lg">&copy; 2025 منصة الإحسان. جميع الحقوق محفوظة.</p>
-        </div>
-    </footer>
+<!---------------------------------------- Footer ---------------------------------------->
+<div id="footer-placeholder"></div>
+<!---------------------------------------- Footer ---------------------------------------->
 
-    <script src="js/index.js"></script>
-    <script src="js/navbar.js"></script>
+<script src="js/index.js"></script>
 </body>
 
 </html>
