--- a/html/about.html
+++ b/html/about.html
@@ -124,153 +124,156 @@
 </head>
 
 <body>
-        <!---------------------------------------- شريط التنقل ---------------------------------------->
-        <div id="navbar-placeholder"></div>
-        <!---------------------------------------- شريط التنقل ---------------------------------------->
-        <section class="islamic-pattern min-h-screen py-10 px-4">
-    <div class="max-w-5xl mx-auto bg-light rounded-2xl shadow-custom overflow-hidden relative z-10">
-        <!-- Header Section -->
-        <div class="bg-primary py-8 px-6 relative">
-            <div class="absolute -top-10 -left-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
-            <div class="absolute -bottom-10 -right-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
-            <div class="flex justify-center mb-4">
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
+    <div id="navbar-placeholder"></div>
+    <!---------------------------------------- شريط التنقل ---------------------------------------->
+    <section class="islamic-pattern min-h-screen py-10 px-4">
+        <div class="max-w-5xl mx-auto bg-light rounded-2xl shadow-custom overflow-hidden relative z-10">
+            <!-- Header Section -->
+            <div class="bg-primary py-8 px-6 relative">
+                <div class="absolute -top-10 -left-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
+                <div class="absolute -bottom-10 -right-10 w-32 h-32 bg-gold rounded-full opacity-20"></div>
+                <div class="flex justify-center mb-4">
 
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12" viewBox="0 0 100 100">
-                    <defs>
-                        <mask id="crescentMask">
-                            <!-- الخلفية البيضاء تُظهر الأجزاء المرغوبة -->
-                            <rect width="100" height="100" fill="white" />
-                            <!-- الدائرة السوداء تُحجب جزءاً من الدائرة الأساسية -->
-                            <circle cx="60" cy="40" r="35" fill="black" />
-                        </mask>
-                    </defs>
-                    <!-- الدائرة الأساسية التي يتم تطبيق القناع عليها -->
-                    <circle cx="50" cy="50" r="40" fill="#D4AF37" mask="url(#crescentMask)" />
-                </svg>
-            </div>
-            <h1 class="text-3xl font-bold text-light text-center relative z-10">يد الخير</h1>
-            <p class="text-light text-center mt-2 relative z-10">
-                معاً نحو مستقبل أفضل - رمضان كريم
-            </p>
-        </div>
-
-        <!-- About Us Section -->
-        <div class="p-8">
-            <div class="flex flex-col md:flex-row gap-8">
-                <!-- القسم الأول: نبذة عنا -->
-                <div class="md:w-1/2">
-                    <h2 class="text-2xl font-bold text-primary mb-4">من نحن</h2>
-                    <div class="about-card bg-white rounded-lg p-6 shadow-md">
-                        <p class="text-gray-700 mb-4">
-                            موقع <span class="font-bold text-primary">إحسان</span> هو منصة خيرية غير ربحية تأسست عام
-                            2017، تهدف إلى تقديم الدعم والمساعدة للمحتاجين وتعزيز روح التكافل الاجتماعي في مجتمعنا.
-                        </p>
-                        <p class="text-gray-700 mb-4">
-                            نسعى من خلال "إحسان" إلى تحقيق الشفافية والاحترافية في تقديم الخدمات الخيرية، مع التركيز
-                            على دعم الأسر الفقيرة، تمكين الأيتام، ودعم التعليم والرعاية الصحية.
-                        </p>
-                        <ul class="list-disc list-inside text-gray-700 mb-4 mr-4">
-                            <li>كفالة الأيتام والأسر المحتاجة</li>
-                            <li>تأمين الاحتياجات الأساسية</li>
-                            <li>دعم التعليم والبحث العلمي</li>
-                            <li>مشاريع إفطار الصائم والفعاليات الرمضانية</li>
-                        </ul>
-                        <p class="text-gray-700">
-                            نؤمن بأن العمل الخيري هو جسراً لبناء مجتمع متماسك، ونسعى لأن يكون موقع "إحسان" علامة
-                            فارقة في دعم وتغيير حياة الكثيرين.
-                        </p>
-                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12" viewBox="0 0 100 100">
+                        <defs>
+                            <mask id="crescentMask">
+                                <!-- الخلفية البيضاء تُظهر الأجزاء المرغوبة -->
+                                <rect width="100" height="100" fill="white" />
+                                <!-- الدائرة السوداء تُحجب جزءاً من الدائرة الأساسية -->
+                                <circle cx="60" cy="40" r="35" fill="black" />
+                            </mask>
+                        </defs>
+                        <!-- الدائرة الأساسية التي يتم تطبيق القناع عليها -->
+                        <circle cx="50" cy="50" r="40" fill="#D4AF37" mask="url(#crescentMask)" />
+                    </svg>
                 </div>
-
-                <!-- القسم الثاني: رؤيتنا وقيمنا -->
-                <div class="md:w-1/2">
-                    <h2 class="text-2xl font-bold text-primary mb-4">رؤيتنا وقيمنا</h2>
-                    <div class="about-card bg-white rounded-lg p-6 shadow-md mb-6">
-                        <h3 class="text-xl font-bold text-secondary mb-2">رؤيتنا</h3>
-                        <p class="text-gray-700 mb-4">
-                            نسعى لبناء مجتمع متكافل يشعر فيه كل فرد بالكرامة والأمان، مع توفير فرص متساوية للنمو
-                            والتطور.
-                        </p>
-                        <h3 class="text-xl font-bold text-secondary mb-2">رسالتنا</h3>
-                        <p class="text-gray-700 mb-4">
-                            تقديم خدمات خيرية متميزة بكل شفافية واحترافية، لتعزيز قيم التضامن والتعاون في المجتمع.
-                        </p>
-                        <h3 class="text-xl font-bold text-secondary mb-2">قيمنا</h3>
-                        <ul class="list-disc list-inside text-gray-700 mr-4">
-                            <li>الشفافية والمصداقية</li>
-                            <li>الإخلاص والتفاني</li>
-                            <li>التكافل الاجتماعي</li>
-                            <li>العدالة والمساواة</li>
-                            <li>الابتكار والإبداع</li>
-                        </ul>
-                    </div>
-                </div>
+                <h1 class="text-3xl font-bold text-light text-center relative z-10">يد الخير</h1>
+                <p class="text-light text-center mt-2 relative z-10">
+                    معاً نحو مستقبل أفضل - رمضان كريم
+                </p>
             </div>
 
-            <!-- قسم الإنجازات -->
-            <h2 class="text-2xl font-bold text-primary mt-8 mb-4">إنجازاتنا</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <!-- إنجاز 1 -->
-                <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
-                    <div class="flex items-center justify-center mb-4">
-                        <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
+            <!-- About Us Section -->
+            <div class="p-8">
+                <div class="flex flex-col md:flex-row gap-8">
+                    <!-- القسم الأول: نبذة عنا -->
+                    <div class="md:w-1/2">
+                        <h2 class="text-2xl font-bold text-primary mb-4">من نحن</h2>
+                        <div class="about-card bg-white rounded-lg p-6 shadow-md">
+                            <p class="text-gray-700 mb-4">
+                                موقع <span class="font-bold text-primary">إحسان</span> هو منصة خيرية غير ربحية تأسست عام
+                                2017، تهدف إلى تقديم الدعم والمساعدة للمحتاجين وتعزيز روح التكافل الاجتماعي في مجتمعنا.
+                            </p>
+                            <p class="text-gray-700 mb-4">
+                                نسعى من خلال "إحسان" إلى تحقيق الشفافية والاحترافية في تقديم الخدمات الخيرية، مع التركيز
+                                على دعم الأسر الفقيرة، تمكين الأيتام، ودعم التعليم والرعاية الصحية.
+                            </p>
+                            <ul class="list-disc list-inside text-gray-700 mb-4 mr-4">
+                                <li>كفالة الأيتام والأسر المحتاجة</li>
+                                <li>تأمين الاحتياجات الأساسية</li>
+                                <li>دعم التعليم والبحث العلمي</li>
+                                <li>مشاريع إفطار الصائم والفعاليات الرمضانية</li>
+                            </ul>
+                            <p class="text-gray-700">
+                                نؤمن بأن العمل الخيري هو جسراً لبناء مجتمع متماسك، ونسعى لأن يكون موقع "إحسان" علامة
+                                فارقة في دعم وتغيير حياة الكثيرين.
+                            </p>
                         </div>
                     </div>
-                    <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 10,000</h3>
-                    <p class="text-gray-700 text-center">
-                        عائلة مستفيدة من برامجنا منذ التأسيس
-                    </p>
+
+                    <!-- القسم الثاني: رؤيتنا وقيمنا -->
+                    <div class="md:w-1/2">
+                        <h2 class="text-2xl font-bold text-primary mb-4">رؤيتنا وقيمنا</h2>
+                        <div class="about-card bg-white rounded-lg p-6 shadow-md mb-6">
+                            <h3 class="text-xl font-bold text-secondary mb-2">رؤيتنا</h3>
+                            <p class="text-gray-700 mb-4">
+                                نسعى لبناء مجتمع متكافل يشعر فيه كل فرد بالكرامة والأمان، مع توفير فرص متساوية للنمو
+                                والتطور.
+                            </p>
+                            <h3 class="text-xl font-bold text-secondary mb-2">رسالتنا</h3>
+                            <p class="text-gray-700 mb-4">
+                                تقديم خدمات خيرية متميزة بكل شفافية واحترافية، لتعزيز قيم التضامن والتعاون في المجتمع.
+                            </p>
+                            <h3 class="text-xl font-bold text-secondary mb-2">قيمنا</h3>
+                            <ul class="list-disc list-inside text-gray-700 mr-4">
+                                <li>الشفافية والمصداقية</li>
+                                <li>الإخلاص والتفاني</li>
+                                <li>التكافل الاجتماعي</li>
+                                <li>العدالة والمساواة</li>
+                                <li>الابتكار والإبداع</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
 
-                <!-- إنجاز 2 -->
-                <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
-                    <div class="flex items-center justify-center mb-4">
-                        <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253" />
-                            </svg>
+                <!-- قسم الإنجازات -->
+                <h2 class="text-2xl font-bold text-primary mt-8 mb-4">إنجازاتنا</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <!-- إنجاز 1 -->
+                    <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
+                        <div class="flex items-center justify-center mb-4">
+                            <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            </div>
                         </div>
+                        <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 10,000</h3>
+                        <p class="text-gray-700 text-center">
+                            عائلة مستفيدة من برامجنا منذ التأسيس
+                        </p>
                     </div>
-                    <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 5,000</h3>
-                    <p class="text-gray-700 text-center">
-                        طالب تلقى دعمًا دراسيًا وتمويليًا
-                    </p>
-                </div>
 
-                <!-- إنجاز 3 -->
-                <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
-                    <div class="flex items-center justify-center mb-4">
-                        <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
-                                viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414A1 1 0 0118 9.414V19a2 2 0 01-2 2z" />
-                            </svg>
+                    <!-- إنجاز 2 -->
+                    <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
+                        <div class="flex items-center justify-center mb-4">
+                            <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253" />
+                                </svg>
+                            </div>
                         </div>
+                        <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 5,000</h3>
+                        <p class="text-gray-700 text-center">
+                            طالب تلقى دعمًا دراسيًا وتمويليًا
+                        </p>
                     </div>
-                    <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 15</h3>
-                    <p class="text-gray-700 text-center">
-                        مشروع لبنوك الطعام والمساعدات المجتمعية
-                    </p>
+
+                    <!-- إنجاز 3 -->
+                    <div class="about-card bg-white rounded-lg p-6 shadow-md feature-card">
+                        <div class="flex items-center justify-center mb-4">
+                            <div class="w-16 h-16 bg-accent rounded-full flex items-center justify-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414A1 1 0 0118 9.414V19a2 2 0 01-2 2z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <h3 class="text-xl font-bold text-secondary text-center mb-2">أكثر من 15</h3>
+                        <p class="text-gray-700 text-center">
+                            مشروع لبنوك الطعام والمساعدات المجتمعية
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Lantern Elements -->
-        <div class="lantern lantern-1"></div>
-        <div class="lantern lantern-2"></div>
-        <div class="lantern lantern-3"></div>
+            <!-- Lantern Elements -->
+            <div class="lantern lantern-1"></div>
+            <div class="lantern lantern-2"></div>
+            <div class="lantern lantern-3"></div>
     </section>
-        <script src="../js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
 
     </div>
+    <!---------------------------------------- Footer ---------------------------------------->
+    <div id="footer-placeholder"></div>
+    <!---------------------------------------- Footer ---------------------------------------->
 </body>
 
 </html>
