--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <!-- CSS Link -->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/waterfall.css">
+
+
+
+
 </head>
 
 <body>
@@ -402,6 +407,13 @@
 </div>
 <!---------------------------------------- المراجعات ---------------------------------------->
 
+<a href="https://wa.me/+962785956180" target="_blank" class="whatsapp-btn">
+    <i class="fab fa-whatsapp"></i>
+</a>
+
+<a href="#" class="scroll-to-top-btn">
+    <i class="fas fa-chevron-up"></i> <!-- رمز السهم العلوي -->
+</a>
 
     <!-- Footer -->
     <footer class="bg-[#225470] text-white py-8">
@@ -409,7 +421,8 @@
             <p class="text-lg">&copy; 2025 منصة الإحسان. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
-
+  <div class="moon-container"></div>
+   
     <script src="js/index.js">
 
     </script>
