--- a/index.html
+++ b/index.html
@@ -408,10 +408,9 @@
 <!---------------------------------------- Footer ---------------------------------------->
 <div class="moon-container"></div>
 
-<script src="js/index.js">
-
-</script>
 <script src="js/index.js"></script>
+<script src="js/signedCheck.js"></script>
+
 </body>
 
 </html>
