--- a/html/navbar-index.html
+++ b/html/navbar-index.html
@@ -3,7 +3,7 @@
       <nav class="flex justify-between items-center py-3">
           <!-- Logo -->
           <a href="#" class="z-10 flex items-center group order-2 md:order-1">
-              <img src="../assets/image/image1.png" alt="الريان" class="h-11 group-hover:scale-105 transition-transform" />
+              <img src="assets/image/image1.png" alt="يد الخير" class="h-11 group-hover:scale-105 transition-transform" />
           </a>
 
           <!-- Desktop Navigation -->
@@ -40,12 +40,12 @@
                     </a>
                 </li>
                 <li class="relative group px-1">
-                    <a href="html/top-donors.html" class="inline-block py-2 px-4 text-white hover:text-gold font-medium">أبرز المساهمين
+                    <a href="html/top-donars.html" class="inline-block py-2 px-4 text-white hover:text-gold font-medium">أبرز المساهمين
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"></span>
                     </a>
                 </li>
                 <li class="relative group px-1">
-                    <a href="html/Quran.html" class="inline-block py-2 px-4 text-white hover:text-gold font-medium">القرآن
+                    <a href="html/quran.html" class="inline-block py-2 px-4 text-white hover:text-gold font-medium">القرآن
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-gold transform scale-x-0 group-hover:scale-x-100 transition-transform origin-left"></span>
                     </a>
                 </li>
