--- a/html/product-details.html
+++ b/html/product-details.html
@@ -175,7 +175,7 @@
 
                     <div class="space-y-6">
                         <!-- Case Card 1 -->
-                        <a href="/html/products.html">
+                        <a href="products.html">
                             <div class="border border-gray-100 rounded-lg p-4 hover:shadow-md transition-shadow">
                                 <h4 class="font-bold secondary-color mb-2">سداد دين أرملة</h4>
                                 <p class="text-gray-600 text-sm mb-3 line-clamp-2">أرملة تعول 4 أطفال وعليها دين بسبب
