--- a/html/products.html
+++ b/html/products.html
@@ -363,7 +363,7 @@
                         </div>
                     </div>
 
-                   <a href="/html/payment.html"> <button
+                   <a href="payment.html"> <button
                         class="primary-bg text-white px-6 py-3 rounded-lg font-bold shadow-md hover:bg-opacity-90 transition-all transform hover:-translate-y-0.5 mt-4">
                         ساهم في الحملة الآن
                     </button></a>
