--- a/html/navbar-index.html
+++ b/html/navbar-index.html
@@ -2,8 +2,8 @@
     <div class="container mx-auto px-4">
         <nav class="flex justify-between items-center py-3">
             <!-- Logo -->
-            <a href="#" class="z-10 flex items-center group order-2 md:order-1">
-                <img src="assets/image/image1.png" alt="الريان" class="h-11 group-hover:scale-105 transition-transform" />
+            <a href="../index.html" class="z-10 flex items-center group order-2 md:order-1">
+                <img src="assets/image/image1.png" alt="يد الخير" class="h-11 group-hover:scale-105 transition-transform" />
             </a>
 
             <!-- Desktop Navigation -->
